fix text overflow on grou description

--- a/frontend/src/styles/pages/_group-grid.css
+++ b/frontend/src/styles/pages/_group-grid.css
@@ -53,7 +53,6 @@
   margin: 8px 20px 15px 20px;
   letter-spacing: 0.1px;
   text-overflow: ellipsis;
-  display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
